package proto;

option java_package = "com.lvl6.aoc2.noneventprotos";
option java_outer_classname = "AocTwoEventProtocolProto";

enum AocTwoEventProtocolRequest {
	C_TRAIN_OR_UPGRADE_SPELL_EVENT = 0;
	C_BUILD_OR_UPGRADE_STRUCTURE_EVENT = 1;
	C_REFILL_HP_OR_MANA_WITH_CONSUMABLE_EVENT = 2;
	C_REPAIR_EQUIP_EVENT = 3;
	C_SELECT_USER_CLASS_TYPE_EVENT = 4;
	C_STARTUP_EVENT = 5;
	C_RETURN_HOME_EVENT = 6;
	C_COMPLETE_DUNGEON_EVENT = 7;

}

enum AocTwoEventProtocolResponse {
	S_TRAIN_OR_UPGRADE_SPELL_EVENT = 0;
	S_BUILD_OR_UPGRADE_STRUCTURE_EVENT = 1;
	S_REFILL_HP_OR_MANA_WITH_CONSUMABLE_EVENT = 2;
	S_REPAIR_EQUIP_EVENT = 3;
	S_SELECT_USER_CLASS_TYPE_EVENT = 4;
	S_STARTUP_EVENT = 5;
	S_RETURN_HOME_EVENT = 6;
	S_COMPLETE_DUNGEON_EVENT = 7;

	S_FORCE_LOGOUT_EVENT = 100;
}