
import "FullUserProto.proto";

package proto;

option java_package = "com.lvl6.aoc2.eventprotos";
option java_outer_classname = "StartupEventProto";

//user can queue up multiple consumables

message StartupRequestProto {
	optional MinimumUserProto mup = 1; //would contain the value corresponding to LoginType
	optional LoginType loginType = 2;
	
	//extensible for the future: facebook or email required
	enum LoginType {
		GAME_CENTER_ID = 0;
		UDID = 1;
	}
}

message StartupResponseProto {
	optional FullUserProto fup = 1;
	optional int64 currentServerTime = 2; //"approximate server time, and some lag"
	optional StartupStatus status = 3;
	
	
	
	
	enum StartupStatus {
		SUCCESS_GAME_CENTER_ID = 0;
		SUCCESS_UDID = 1;
		SUCCESS_NEW_USER = 2;
		FAIL_OTHER = 4;
		
	} 
}